# vcpkgTest

./: CMakeLists.txt
.github/workflows/: ci.yml  mingw.yml
